--- a/SportsStore/Views/Cart/Index.cshtml
+++ b/SportsStore/Views/Cart/Index.cshtml
@@ -33,3 +33,7 @@
         </tr>
     </tfoot>
 </table>
+
+<div class="text-center">
+    <a class="btn btn-primary" href="@Model.ReturnUrl">Continue Shopping</a>
+</div>
