Added the Cart Summary widget

--- a/SportsStore/Views/Shared/_Layout.cshtml
+++ b/SportsStore/Views/Shared/_Layout.cshtml
@@ -3,14 +3,20 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Sports Store</title>
     <link rel="stylesheet"
           asp-href-include="/lib/bootstrap/**/*.min.css"
           asp-href-exclude="**/*-reboot*,**/*-grid*" />
+    <link rel="stylesheet" asp-href-include="/lib/fontawesome/css/*.min.css" />
+    <title>Sports Store</title>
 </head>
 <body>
     <div class="navbar navbar-inverse bg-inverse" role="navigation">
-        <a class="navbar-brand" href="#">SPORTS STORE</a>
+        <div class="row">
+            <a class="col navbar-brand" href="#">SPORTS STORE</a>
+            <div class="col-4 text-right">
+                @await  Component.InvokeAsync("CartSummary")
+            </div>
+        </div>
     </div>
 
     <div class="row m-1 p-1">
