--- a/SportsStore/Views/Shared/_AdminLayout.cshtml
+++ b/SportsStore/Views/Shared/_AdminLayout.cshtml
@@ -15,8 +15,18 @@
     <title>@ViewBag.Title</title>
 </head>
 <body class="m-1 p-1">
-    <div class="bg-info p-2">
-        <h4>@ViewBag.Title</h4>
+    <div class="bg-info p-2 row">
+        <div class="col">
+            <h4>@ViewBag.Title</h4>
+        </div>
+        <div class="col-2">
+            @*to check if the user already login, if yes, then show the log out button*@
+            @if (User.Identity.IsAuthenticated)
+            {
+                <a class="btn btn-sm btn-primary"
+                   asp-action="Logout" asp-controller="Account">Log Out</a>
+            }
+        </div>
     </div>
     @if (TempData["message"] != null)
     {
